[package]
name = "import-http-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
log = { version = "0.4.29", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
anyhow = { version = "1.0.100", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
toml = { version = "0.9.11", default-features = false, features = ["serde", "parse"] }
async-trait = { version = "0.1.89", default-features = false }
reqwest = { version = "0.13.1", default-features = false }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }

[dependencies.common]
path = "../common"

[dev-dependencies.common]
path = "../common"
features = ["test"]

[dev-dependencies]
autospy = { version = "1.6.1", default-features = false, features = ["async"]}

[lints]
workspace = true
