[package]
name = "import-http-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.29", default-features = false }
env_logger = { version = "0.11.8", default-features = false }

[lints]
workspace = true