[package]
name = "import-http-sender"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt-multi-thread", "net"] }
log = { version = "0.4.29", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
toml = { version = "0.9.11", default-features = false, features = ["serde", "parse"] }
async-trait = { version = "0.1.89", default-features = false }
tower = { version = "0.5.3", default-features = false, features = ["util"] }

[dependencies.common]
path = "../common"

[dev-dependencies.common]
path = "../common"
features = ["test"]

[lints]
workspace = true